--- a/Project-Atlas.vbproj
+++ b/Project-Atlas.vbproj
@@ -125,6 +125,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calendar.Designer.vb">
+      <DependentUpon>Calendar.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Calendar.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Create.Designer.vb">
       <DependentUpon>Create.vb</DependentUpon>
     </Compile>
@@ -135,6 +141,12 @@
       <DependentUpon>Direction guide.vb</DependentUpon>
     </Compile>
     <Compile Include="Direction guide.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DisplayData.Designer.vb">
+      <DependentUpon>DisplayData.vb</DependentUpon>
+    </Compile>
+    <Compile Include="DisplayData.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.vb">
@@ -181,11 +193,17 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Calendar.resx">
+      <DependentUpon>Calendar.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Create.resx">
       <DependentUpon>Create.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Direction guide.resx">
       <DependentUpon>Direction guide.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DisplayData.resx">
+      <DependentUpon>DisplayData.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
