--- a/Project-Atlas.vbproj
+++ b/Project-Atlas.vbproj
@@ -161,6 +161,18 @@
       <DependentUpon>AllMonitoring.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Building.Designer.vb">
+      <DependentUpon>Building.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Building.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Building_name.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Building_name.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Calendar.Designer.vb">
       <DependentUpon>Calendar.vb</DependentUpon>
     </Compile>
@@ -270,6 +282,13 @@
     <EmbeddedResource Include="AllMonitoring.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>AllMonitoring.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Building.resx">
+      <DependentUpon>Building.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Building_name.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Building_name.vb</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Calendar.resx">
       <DependentUpon>Calendar.vb</DependentUpon>
